2015-07-31  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: Version 0.3.

2015-07-28  Niibe Yutaka  <gniibe@fsij.org>

	* usb-msc.c (fraucheky_main): Clear fraucheky_main_done at end.
	* disk-on-rom.c (msc_scsi_write): Check fraucheky_enabled.

	* fraucheky.c (fraucheky_setup, fraucheky_get_descriptor): Follow
	the API change of USB driver.

2015-07-27  Niibe Yutaka  <gniibe@fsij.org>

	* configure (check_build_operating_system)
	(get_size_and_timestamp): New.  Support FreeBSD for build system.
	Reported by Kenji Rikitake.

2015-07-26  Kenji Rikitake  <kenji@k2r.org>

	* usb-msc.c (scsi_inquiry_data_83): New.
	(scsi_inquiry_data): Version = 0 (was: 5:SPC-3).
	(msc_handle_command): Better interoperability for SCSI_INQUIRY.

2015-07-25  Niibe Yutaka  <gniibe@fsij.org>

	* usb-msc.c (msc_handle_command): LUN=0 should not be in the LUN
	LIST.  Return empty list (LUN LIST LENGTH = 0).

2015-07-23  Niibe Yutaka  <gniibe@fsij.org>

	* usb-msc.c (msc_handle_command): Handle SCSI_REPORT_LUN command.
	* msc.h (SCSI_REPORT_LUN): New.

2015-03-17  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: Version 0.2.

	* configure: Generate INDEX substituting @REVISION@.

2015-03-17  Niibe Yutaka  <gniibe@fsij.org>

	* VERSION: Version 0.1a.

2015-01-21  Niibe Yutaka  <gniibe@fsij.org>

	* README: Version 0.1.

	* build.mk (distclean): Add disk-on-rom.h.

	* configure (file_info, cluster_map): New functions.

	* disk-on-rom.c: Include disk-on-rom.h, which is generated.
	(d0_fat0_sector): Use CLUSTER_MAP macro.
	(d0_rootdir_sector): Use macros of COPYING_ATTRIBUTES,
	README_ATTRIBUTES, INDEX_ATTRIBUTES.
	Use macros of COPYING__FILE_SIZE,
	README__FILE_SIZE, INDEX__FILE_SIZE.

2013-11-15  Niibe Yutaka  <gniibe@fsij.org>

	* fraucheky.c (fraucheky_get_descriptor): Handle string descriptor
	request correctly.

2013-11-06  Niibe Yutaka  <gniibe@fsij.org>

	* Version 0.0.
